--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ ext {
 
 //java 8 backwards compatibility flag
 allprojects {
-    group = "io.user.modname"
+    group = "io.me13.acountde"
     version '1.0'
 
     tasks.withType(JavaCompile){
@@ -85,7 +85,18 @@ allprojects {
     }
 
     dependencies {
+        //processors
+        annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
+
+        //main components
+        compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+        compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
         compileOnly 'org.jetbrains:annotations:23.0.0'
+
+        //ME13 components
+        implementation modCore(':logger')
+        implementation modCore(':bundle2')
+        implementation modCore(':units')
     }
 
     tasks.withType(JavaCompile).tap {
@@ -105,16 +116,17 @@ allprojects {
 }
 
 dependencies {
-    //main components
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
-    compileOnly 'org.jetbrains:annotations:23.0.0'
-    annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
+    annotationProcessor project(":processor")
+    compileOnly project(":anno")
+}
 
-    //ME13 components
-    implementation modCore(':logger')
-    implementation modCore(':bundle2')
-    implementation modCore(':units')
+project(":processor") {
+    sourceSets.main.resources.srcDirs = ["assets"]
+
+    dependencies {
+        implementation rootProject.project(":anno")
+        implementation modCore(":annotations")
+    }
 }
 
 //force arc version
