--- a/build.gradle
+++ b/build.gradle
@@ -167,15 +167,43 @@ task jarAndroid{
     }
 }
 
-jar{
-    archiveFileName = "${project.archivesBaseName}Desktop.jar"
+jar {
+    var prop = gradle.startParameter.projectProperties
+    String asString = null
 
-    from{
-        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
+    if(prop.containsKey('ex')) {
+        asString = "${archivesBaseName}Desktop.${prop.get('ex')}"
+    } else {
+        println('Using default file exception (jar)')
+        asString = "${archivesBaseName}Desktop.jar"
+    }
+
+    archiveFileName = asString
+
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
     }
 
     from(rootDir) {
         include "mod.json"
+    }
+
+    doLast {
+        if(prop.containsKey('path')) {
+            copy {
+                println("Copy file ${asString} to destonation")
+                from layout.buildDirectory.file("libs/$asString")
+                into layout.buildDirectory.dir(prop.get('path'))
+            }
+        }
+
+        if(prop.containsKey('m')) {
+            exec {
+                commandLine 'cmd', '/c', "\"${prop.get('m')}\""
+            }
+        }
     }
 }
 
@@ -192,30 +220,4 @@ task deploy(type: Jar){
             delete "$buildDir/libs/${project.archivesBaseName}Android.jar"
         }
     }
-}
-
-task zipJar(type: Jar) {
-    archiveFileName = "${project.archivesBaseName}Desktop.zip"
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-    from {
-        configurations.runtimeClasspath.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
-    }
-
-    from("$buildDir/classes/java/main") {
-        include "**"
-    }
-
-    from("$buildDir/resources/main") {
-        include "**"
-    }
-
-    from(rootDir) {
-        include "mod.json"
-        include "icon.png"
-    }
-
-    dependsOn 'jar'
 }
